# COMP3297-Trans19

./: .gitignore  .replit  README.md  db.sqlite3  pyproject.toml  requirements.txt
mysite/: settings.py  urls.py
trans19/: admin.py  apps.py  custom_layout_object.py  forms.py  models.py  urls.py  views.py
trans19.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
trans19/migrations/: 0001_initial.py  0002_auto_20200402_1307.py  0003_auto_20200404_0013.py  0004_auto_20200406_2352.py  0005_category.py  0006_auto_20200407_1323.py  0007_remove_travelhistory_patient.py  0008_patient_location.py  0009_location.py  0010_auto_20200430_1512.py  0011_auto_20200430_1728.py  0012_auto_20200505_0456.py
trans19/static/: indexCSS.css  registrationCSS.css
trans19/static/trans19/: style.css
trans19/templates/: base_generic.html  index.html  login_generic.html
trans19/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
trans19/templates/trans19/: addLocation.html  addPatient.html  deleteLocation.html  deletePatient.html  detail.html  formset.html  index.html  locations.html  patient_detail.html  patient_list.html  patients.html  searchConnections.html  travelhistory_confirm_delete.html  travelhistory_detail.html  travelhistory_list.html
trans19/templates/trans19/layouts/: base.html  navbar.html
trans19/templates/trans19/svgs/: loginSvg.html  passwordSvg.html  usernameSvg.html
